; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_rarch_clear_all_thread_waits.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_rarch_clear_all_thread_waits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @rarch_clear_all_thread_waits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rarch_clear_all_thread_waits(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = icmp ugt i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = call i32 @audio_driver_start(i32 0)
  br label %11

9:                                                ; preds = %2
  %10 = call i32 (...) @audio_driver_stop()
  br label %11

11:                                               ; preds = %9, %7
  ret i32 1
}

declare dso_local i32 @audio_driver_start(i32) #1

declare dso_local i32 @audio_driver_stop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
